@@ -1,64 +1,0 @@
-<?php
-/*
- * ZenMagick - Extensions for zen-cart
- * Copyright (C) 2006-2010 zenmagick.org
- *
- * Portions Copyright (c) 2003 The zen-cart developers
- * Portions Copyright (c) 2003 osCommerce
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
- * your option) any later version.
- *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
- */
-?>
-<?php
-
-
-/**
- * A product.
- *
- * @author DerManoMann
- * @package org.zenmagick.plugins.zm_dual_pricing
- * @version $Id$
- */
-class Product extends ZMProduct {
-
-    /**
-     * Create new product.
-     *
-     * @param int id The product id.
-     * @param string name The product name.
-     * @param string description The product description.
-     */
-    function __construct($id=0, $name='', $description='') {
-        parent::__construct($id, $name, $description);
-    }
-
-    /**
-     * Destruct instance.
-     */
-    function __destruct() {
-        parent::__destruct();
-    }
-
-
-    /**
-     * {@inheritDoc}
-     */
-    public function getProductPrice() { 
-        return zm_dp_get_price(zm_dp_get_level(), parent::getProductPrice(), $this->get('products_price_w'));
-    }
-
-}
-
-?>
