@@ -1,15 +1,0 @@
-This is the ZenMagick plugin to support zen-cart's dual pricing mod.
-
-
-Installation
-============
-1) Download, unpack and install as instructed the zen-cart Dual Pricing module from
-   here: http://www.zen-cart.com/index.php?main_page=product_contrib_info&cPath=40_61&products_id=166
-2) Unzip this plugin into the zenmagick/plugins directory.
-3) Install plugin using the ZenMagick Plugin Manager.
-4) Enjoy
-
-
-Limitations
-===========
-Currently only product prices are supported.
